# rust-duration-fmt

./: .gitignore  Cargo.toml  LICENSE
src/: decomposed.rs  fmt.rs  lib.rs
src/fmt/: error.rs  lex.rs  mod.rs
